--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -142,6 +142,10 @@
 		<script src="../static/js/draggable/jquery-ui.js"
 				th:src="@{/js/draggable/jquery-ui.js}"></script>
 
+		<!-- datetime -->
+		<script src="../static/js/datatableplugin/datetime.js"
+				th:src="@{/js/datatableplugin/datetime.js}"></script>
+
 		<!-- initialize the validator.js  -->
 		<script th:inline="javascript">
 	        /*<![CDATA[*/
