--- a/src/main/resources/templates/provider/providerList.html
+++ b/src/main/resources/templates/provider/providerList.html
@@ -292,6 +292,7 @@
 									<td class="text-full-length">
 										<a th:href="@{|/provider/${provider.id}/comunicazione/list|}" class="btn btn-primary min-icon-width" th:title="#{label.comunicazioni_provider}"><i class="fa fa-comments"> </i></a>
 										<a th:href="@{|/provider/${provider.id}/comunicazione/list?nonRisposte=true|}" class="btn btn-primary min-icon-width" th:title="#{label.comunicazioni_non_risposte_provider}"><i class="fa fa-commenting"> </i></a>
+										<a th:href="@{|/audit/entity/ProviderAudit/entityId/${provider.id}|}" class="btn btn-primary min-icon-width" th:title="#{label.registro_operazioni}"><i class="fa fa-book"> </i></a>
 										<a th:href="@{|/provider/${provider.id}/evento/list|}" class="btn btn-primary min-icon-width" th:title="#{label.eventi_provider}"><i class="fa fa-pencil-square-o"> </i></a>
 										<a th:href="@{|/provider/${provider.id}/pianoFormativo/list|}" class="btn btn-primary min-icon-width" th:title="#{label.pfa_provider}"><i class="fa fa-calendar-o"> </i></a>
 										<a th:href="@{|/provider/${provider.id}/relazioneAnnuale/list|}" class="btn btn-primary min-icon-width" th:title="#{label.relazione_annuale_provider}"><i class="fa fa-file-text"> </i></a>
