--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1481,3 +1481,12 @@ li.listStyle-elenco > label{
 .no-order th::after {
 	visibility: hidden;
 }
+
+.accedi-segreteria {
+	width: 50% !important;
+	margin-left: 50% !important;
+	margin-right: 0 !important;
+	margin-top: 10px !important;
+	margin-bottom: 0 !important;
+	font-size: 14px !important;
+}
