--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,7 +42,7 @@
 							</div>
 							<input class="btn btn-default btn-block submit col-xs-3" type="submit"
 								value="label.accedi" th:value="#{label.accedi}" />
-							<a class="btn btn-default btn-block submit col-xs-3"
+							<a class="btn btn-default btn-block submit col-xs-3 accedi-segreteria"
 								th:text="#{label.accedi_segreteria}" th:href="@{/cas/login}"></a>
 						</div>
 						<div class="clearfix"></div>
