--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -205,7 +205,7 @@
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
 						<div class="tile-stats clickable" onclick="goTo('eventi/CREDITI_NON_CONFERMATI/list')">
-							<div class="icon"><i class="fa fa-pencil-square-o"></i></div>
+							<div class="icon"><i class="fa fa-exclamation-triangle"></i></div>
 							<div class="col-xs-10">
 			                	<div class="count" th:text="${homeWrapper.eventiCreditiNonConfermati}"></div>
 			                	<h3 class="tile-h3" th:text="${homeWrapper.eventiCreditiNonConfermati == 1} ? #{label.evento} : #{label.eventi}"></h3>
@@ -215,7 +215,7 @@
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
 						<div class="tile-stats clickable" onclick="goTo('eventi/ALIMENTAZIONE_PRIMA_INFANZIA/list')">
-							<div class="icon"><i class="fa fa-pencil-square-o"></i></div>
+							<div class="icon"><i class="glyphicon glyphicon-baby-formula"></i></div>
 							<div class="col-xs-10">
 			                	<div class="count" th:text="${homeWrapper.eventiAlimentazionePrimaInfanzia}"></div>
 			                	<h3 class="tile-h3" th:text="${homeWrapper.eventiAlimentazionePrimaInfanzia == 1} ? #{label.evento} : #{label.eventi}"></h3>
@@ -225,7 +225,7 @@
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
 						<div class="tile-stats clickable" onclick="goTo('eventi/MEDICINE_NON_CONVENZIONALI/list')">
-							<div class="icon"><i class="fa fa-pencil-square-o"></i></div>
+							<div class="icon"><i class="fa fa-medkit"></i></div>
 							<div class="col-xs-10">
 			                	<div class="count" th:text="${homeWrapper.eventiMedicineNonConvenzionali}"></div>
 			                	<h3 class="tile-h3" th:text="${homeWrapper.eventiMedicineNonConvenzionali == 1} ? #{label.evento} : #{label.eventi}"></h3>
