--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -84,6 +84,16 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4" onclick="goTo('comunicazione/dashboard')">
+						<div class="tile-stats clickable">
+							<div class="icon"><i class="fa fa-comments"></i></div>
+							<div class="col-xs-10">
+			                	<div class="count" th:text="${homeWrapper.nuoviMessaggi}"></div>
+			                	<h3 class="tile-h3" th:text="${homeWrapper.nuoviMessaggi == 1 ? #messages.msg('label.nuovo_messaggio') : #messages.msg('label.nuovi_messaggi')}"></h3>
+			                	<p class="count-text" th:text="${homeWrapper.nuoviMessaggi == 1 ? #messages.msg('label.ricevuto') : #messages.msg('label.ricevuti')}">Ricevuti</p>
+							</div>
+						</div>
+					</div>
 				</div>
 
 				<!-- REFEREE -->
